@@ -1,0 +1,52 @@
+#!/bin/sh
+#
+#  runRvQC
+###########################################################################
+#
+# A copy of this script is intended to reside in /usr/local/bin on all
+# servers to make it available in the common PATH.
+#
+# Its allows someone to run the rv QC reports without having
+# to provide the full path to where the wrapper script is installed.
+#
+###########################################################################
+
+usage ()
+{
+    echo "Usage: runRvQC input_file"
+    echo "       where"
+    echo "           input_file = path to the rv input file"
+    exit 1
+}
+
+#LOADDIR=/usr/local/mgi/live/dataload/rvload
+LOADDIR=/home/sc/work/dataload/rvload
+WRAPPER=${LOADDIR}/bin/rvQC.sh
+
+#
+# The rvload product is not installed on all servers, so make sure
+# it exists on this one.
+#
+if [ ! -d ${LOADDIR} ]
+then
+    echo "The rvload software does not exist on this server"; exit 1
+fi
+
+#
+# Make sure an input file was passed as an argument to the script.
+#
+if [ $# -eq 1 ]
+then
+    if [ ! -r $1 ]
+    then
+        echo "Input file does not exist: $1"; exit 1
+    fi
+else
+    usage
+fi
+
+#
+# Invoke the QC report wrapper script with the arguments that
+# were passed to this script.
+#
+${WRAPPER} $*
