@@ -41,6 +41,10 @@ INPUTDIR=${FILEDIR}/input
 
 export FILEDIR ARCHIVEDIR LOGDIR RPTDIR OUTPUTDIR INPUTDIR
 
+# expected obo version
+OBO_FILE_VERSION=1.2
+export OBO_FILE_VERSION
+
 # Full path to the default input file.
 # This is where the publish script places the file
 INPUT_FILE_DEFAULT=${INPUTDIR}/RelationshipVocab.obo
@@ -50,9 +54,9 @@ export INPUT_FILE_DEFAULT
 #
 # Full path to the  sanity/QC log.
 #
-RVLOADQC_LOGFILE=${LOGDIR}/rvQC.log
+QC_LOGFILE=${LOGDIR}/rvQC.log
 
-export RVLOADQC_LOGFILE 
+export QC_LOGFILE 
 
 # Full path to the sanity/QC reports.
 #
@@ -106,7 +110,7 @@ export JOBSTREAM
 MAIL_LOADNAME="Relationship Vocabulary Load"
 
 #  Recipient list for mailing the log files (comma-separated)
-MAIL_LOG_PROC="sc"
+MAIL_LOG_PROC=""
 
 export MAIL_LOADNAME MAIL_LOG_PROC
 
